--- a/form/package.json
+++ b/form/package.json
@@ -7,18 +7,24 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "email-validator": "^2.0.4",
     "expo": "~41.0.1",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
+    "formik": "^2.2.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-email-validator": "^1.0.2",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
